--- a/style.css
+++ b/style.css
@@ -5,6 +5,17 @@ body {
 	overflow: hidden;
 }
 
+#arena {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+}
+
 video {
 	position: absolute;
 	left: 0;
