--- a/style.css
+++ b/style.css
@@ -106,3 +106,30 @@ button {
 	margin: 5vmin;
 	text-transform: uppercase;
 }
+
+#evolution {
+	margin-top: 5vmin;
+	font-size: 10vmin;
+	text-align: left;
+}
+#evolution span {
+	margin-left: 4vmin;
+}
+#evolution span:after {
+	content: ':';
+}
+#evo-list {
+	margin: 1vmin;
+}
+#evo-list ul {
+	padding: 0;
+	margin: 0;
+}
+#evo-list li {
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: contain;
+	list-style: none;
+	margin: 2vmin 10vmin 2vmin 5vmin;
+	padding: 5vmin 15vmin 5vmin 0;
+}
