--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 body {
 	margin: 0;
 	padding: 0;
@@ -75,6 +78,16 @@ video {
 	z-index: 1000000;
 	text-align: center;
 	overflow: auto;
+	border-radius: 2vmin;
+}
+
+#danger-will-robinson {
+	top: 40%;
+	height: auto;
+	bottom: initial;
+	p {
+		font-size: 5vmin;
+	}
 }
 
 .hidden, #popup-shield {
@@ -90,12 +103,12 @@ video {
 	bottom: 0;
 }
 
-h1, button {
+h1 {
 	font-size: 10vmin;
 }
 
 img {
-	width: 80%;
+	width: 40%;
 }
 
 button {
@@ -103,37 +116,36 @@ button {
 	color: white;
 	background: #7b7;
 	border-radius: 100vmax;
-	padding: 5vmin 15vmin;
+	padding: 2vmin 5vmin;
 	cursor: pointer;
 	margin: 5vmin;
 	text-transform: uppercase;
+	font-size: 5vmin;
 }
 
 #evolution {
 	margin-top: 5vmin;
-	font-size: 10vmin;
+	font-size: 5vmin;
 	text-align: left;
-}
-#evolution span {
-	margin-left: 4vmin;
-}
-#evolution span:after {
-	content: ':';
+	span {
+		margin-left: 4vmin;
+		&:after {
+			content: ':';
+		}
+	}
 }
 #evo-list {
 	margin: 1vmin;
-}
-#evo-list ul {
 	padding: 0;
 	margin: 0;
-}
-#evo-list li {
-	background-repeat: no-repeat;
-	background-position: right;
-	background-size: contain;
-	list-style: none;
-	margin: 2vmin 10vmin 2vmin 5vmin;
-	padding: 5vmin 15vmin 5vmin 0;
+	li {
+		background-repeat: no-repeat;
+		background-position: right;
+		background-size: contain;
+		list-style: none;
+		margin: 2vmin 10vmin 2vmin 5vmin;
+		padding: 5vmin 15vmin 5vmin 0;
+	}
 }
 
 .fab {
