--- a/style.scss
+++ b/style.scss
@@ -50,6 +50,7 @@ video {
 	position: absolute;
 	background-size: contain;
 	background-repeat: no-repeat;
+	background-position: bottom;
 	width: 500vmin;
 	height: 750vmin;
 	margin: 0;
@@ -87,6 +88,7 @@ video {
 	bottom: initial;
 	p {
 		font-size: 5vmin;
+		margin: 5vmin 10vmin;
 	}
 }
 
@@ -114,13 +116,14 @@ img {
 button {
 	display: inline-block;
 	color: white;
-	background: #7b7;
+	background: #5a5;
 	border-radius: 100vmax;
 	padding: 2vmin 5vmin;
 	cursor: pointer;
-	margin: 5vmin;
+	margin: 0 5vmin 5vmin 5vmin;
 	text-transform: uppercase;
 	font-size: 5vmin;
+	border: none;
 }
 
 #evolution {
